--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <section id="portfolio" class="s_portfolio bg_dark">
-	<div class="section_header">
+	<!-- <div class="section_header">
 		<h1>my work</h1>
-	</div>
+	</div> -->
 	<div class="section_content">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row">
 				<div id="portfolio_grid">
 					{% for project in site.categories['project'] %}
